--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@binance/connector": "^3.0.0-rc.2",
     "@types/express": "^4.17.19",
-    "@types/node": "^20.8.5",
+    "@types/node": "^20.8.6",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-binance-api": "^0.13.1",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
