--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@binance/connector": "^3.0.0-rc.2",
+    "@binance/connector": "^3.3.0",
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
     "@types/socket.io": "^3.0.2",
@@ -20,11 +20,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.2",
+    "technicalindicators": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/node-cron": "^3.0.11"
   }
 }
